--- a/fuli/.classpath
+++ b/fuli/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="src" path="core"/>
 	<classpathentry kind="src" path="sso"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0x64">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
