--- a/fuli/config/config.properties
+++ b/fuli/config/config.properties
@@ -3,8 +3,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/fuli?characterEncoding=utf-8&amp;autoReconnect=true
 jdbc.database=fuli
-jdbc.username=root
-jdbc.password=root
+jdbc.username=fuli
+jdbc.password=fuli
 jdbc.dbType=mysql
 jdbc.encrypt=1
 jdbc.showsql=true
